migrate integration tests to webclient (end)